--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "ape-ecs": "^1.0.2",
     "browserify": "^17.0.0",
     "jquery": "^3.5.1",
-    "rot-js": "^2.1.5"
+    "rot-js": "^2.1.5",
+    "tracery-grammar": "^2.7.4"
   }
 }
